app_storefront_base/cartridge/client/scss/default/components/_common.scss
.modal-background {
    background-color: $black;
    display: none;
    height: 100%;
    position: fixed;
    opacity: 0.5;
    width: 100%;
    top: 0;
    left: 0;
}

input[placeholder] {
    text-overflow: ellipsis;
}

header ~ .container a:not(.card-title) {
    color: $blue;
}

.hide-order-discount {
    display: none;
}

.hide-shipping-discount {
    display: none;
}

.order-discount {
    color: $red;
}

.shipping-discount {
    color: $red;
}

.form-tooltip {
    display: none;
    position: absolute;
    left: 0;
    padding: 0.312rem;
    border-radius: $border-radius;
    background-color: $grey6;
    color: $white;
    font-size: 0.928rem;
    max-width: 17.857rem;
    line-height: 1.5em;
}

@mixin tooltip-centered-arrow($top) {
    &:hover {
        &::after,
        &::before {
            top: $top;
            border: solid transparent;
            content: " ";
            height: 0;
            width: 0;
            position: absolute;
            pointer-events: none;
        }

        &::after {
            border-color: transparent;
            border-top-color: $grey6;
            border-width: 0.625rem;
            margin-left: -0.625rem;
        }

        &::before {
            border-color: transparent;
            border-top-color: transparent;
            border-width: 0.785rem;
            margin-left: -0.785rem;
        }
    }
}

.form-group .info-icon {
    margin-left: 0.71rem;
    padding: 0;

    &:hover {
        cursor: pointer;

        .form-tooltip {
            display: block;

            &:hover {
                display: none;
            }
        }
    }

    .icon {
        padding: 0;
        border-radius: 1.25rem;
        background-color: #00a1e0;
        width: 1.5625rem;
        display: inline-block;
        text-align: center;
        color: $white;
        font-weight: 600;

        @include tooltip-centered-arrow(-0.312rem);
    }

    .form-tooltip {
        bottom: 5.528rem;
    }

    @include media-breakpoint-down(xs) {
        .form-tooltip {
            bottom: 4.671rem;
        }
    }
}

